--- a/src/java/br/com/ufrn/bti/desktop/doinhome/views/TarefasCadastroEdicao.fxml
+++ b/src/java/br/com/ufrn/bti/desktop/doinhome/views/TarefasCadastroEdicao.fxml
@@ -8,23 +8,27 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="350.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60">
+<AnchorPane prefHeight="350.0" prefWidth="550.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane layoutX="14.0" layoutY="68.0" prefHeight="268.0" prefWidth="523.0">
          <children>
             <TextField fx:id="tfTarefaTitulo" layoutX="14.0" layoutY="38.0" prefHeight="25.0" prefWidth="250.0" promptText="Título" />
             <ComboBox fx:id="cbTarefaResponsavel" layoutX="13.0" layoutY="80.0" prefHeight="25.0" prefWidth="250.0" promptText="Responsável" />
-            <DatePicker fx:id="dpTarefaPrazoFinal" layoutX="14.0" layoutY="122.0" prefHeight="25.0" prefWidth="250.0" promptText="Prazo final" />
+            <DatePicker fx:id="dpTarefaPrazoFinal" layoutX="13.0" layoutY="164.0" prefHeight="25.0" prefWidth="250.0" promptText="Prazo final" />
             <ButtonBar layoutX="14.0" layoutY="214.0" prefHeight="40.0" prefWidth="200.0">
               <buttons>
                   <Button fx:id="btTarefaSalvar" mnemonicParsing="false" text="Salvar" />
                   <Button fx:id="btTarefaCancelar" mnemonicParsing="false" text="Cancelar" />
               </buttons>
             </ButtonBar>
+            <ComboBox fx:id="cbTarefaDificuldade" layoutX="13.0" layoutY="122.0" prefHeight="25.0" prefWidth="250.0" promptText="Dificuldade" />
          </children>
       </Pane>
-      <Label layoutX="14.0" layoutY="14.0" text="Tarefa" />
+      <Label layoutX="14.0" layoutY="14.0" text="Nova Tarefa">
+         <font>
+            <Font size="24.0" />
+         </font></Label>
    </children>
 </AnchorPane>
