--- a/src/java/br/com/ufrn/bti/desktop/doinhome/views/Container.fxml
+++ b/src/java/br/com/ufrn/bti/desktop/doinhome/views/Container.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrn.bti.desktop.doinhome.views.ContainerController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrn.bti.desktop.doinhome.views.ContainerController">
    <left>
       <VBox prefHeight="400.0" prefWidth="135.0" BorderPane.alignment="CENTER">
          <children>
@@ -28,7 +28,7 @@
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="meu-ovo">
                            <children>
                               <Hyperlink layoutX="13.0" layoutY="14.0" text="Ver todas" />
-                              <Hyperlink layoutX="13.0" layoutY="38.0" text="Nova" />
+                              <Hyperlink fx:id="hlNovaTarefa" layoutX="13.0" layoutY="38.0" onMouseClicked="#mostrarFormularioDeNovaTarefa" text="Nova" />
                            </children>
                         </AnchorPane>
                   </content>
