--- a/src/java/br/com/ufrn/bti/desktop/doinhome/views/UsuarioCadastroEdicao.fxml
+++ b/src/java/br/com/ufrn/bti/desktop/doinhome/views/UsuarioCadastroEdicao.fxml
@@ -11,23 +11,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="550.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrn.bti.desktop.doinhome.views.UsuarioCadastroEdicaoViewController">
+<AnchorPane prefHeight="378.0" prefWidth="550.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.ufrn.bti.desktop.doinhome.views.UsuarioCadastroEdicaoViewController">
    <children>
-      <Pane layoutX="153.0" layoutY="41.0" prefHeight="303.0" prefWidth="292.0">
+      <Pane layoutX="153.0" layoutY="41.0" prefHeight="327.0" prefWidth="292.0">
          <children>
             <TextField fx:id="nomeField" layoutX="13.0" layoutY="7.0" prefHeight="25.0" prefWidth="250.0" promptText="Nome" />
             <ComboBox fx:id="sexoComboBox" layoutX="13.0" layoutY="114.0" prefHeight="25.0" prefWidth="250.0" promptText="Sexo" />
             <DatePicker fx:id="dpNascimento" layoutX="13.0" layoutY="79.0" prefHeight="25.0" prefWidth="250.0" promptText="Data de Nascimento" />
-            <ButtonBar layoutX="56.0" layoutY="249.0" prefHeight="40.0" prefWidth="181.0">
-              <buttons>
-                  <Button mnemonicParsing="false" onAction="#handleCadastrar" text="Salvar" />
-                  <Button mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" />
-              </buttons>
-            </ButtonBar>
+            <ButtonBar layoutX="65.0" layoutY="283.0" prefHeight="40.0" prefWidth="181.0" />
             <ComboBox fx:id="permissaoComboBox" layoutX="13.0" layoutY="152.0" prefHeight="25.0" prefWidth="250.0" promptText="Permissão" />
             <TextField fx:id="cpfField" layoutX="13.0" layoutY="43.0" prefHeight="25.0" prefWidth="250.0" promptText="CPF" />
-            <TextField fx:id="loginField" layoutX="13.0" layoutY="188.0" prefHeight="25.0" prefWidth="250.0" promptText="Login" />
-            <PasswordField fx:id="senhaField" layoutX="14.0" layoutY="222.0" prefHeight="27.0" prefWidth="250.0" promptText="Senha" />
+            <TextField fx:id="loginField" layoutX="13.0" layoutY="220.0" prefHeight="25.0" prefWidth="250.0" promptText="Login" />
+            <PasswordField fx:id="senhaField" layoutX="14.0" layoutY="256.0" prefHeight="27.0" prefWidth="250.0" promptText="Senha" />
+            <Button layoutX="83.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleCadastrar" text="Salvar" />
+            <Button layoutX="147.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleCancelar" text="Cancelar" />
+            <TextField fx:id="emailField" layoutX="14.0" layoutY="186.0" prefHeight="25.0" prefWidth="250.0" promptText="E-mail" />
          </children>
       </Pane>
       <Label layoutX="14.0" layoutY="14.0" text="Novo Usuário">
